Your descriptive commit message here

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </a>
       </div>
     </div>
-    <img src="images/Banner.jpg" alt="Banner" class="heroImage">
+    <div class="heroImage">
+      <img src="images/Banner.jpg" alt="Banner">
+    </div>
   </div>
 
   <div class="sectionContainer">
