--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="style.css">
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Landing Page</title>
+</head>
 
 <body class="body">
   <div class="header">
@@ -11,12 +17,13 @@
       <div class="hamburger">
         <img src="images/Hamburger.svg" alt="HamburgerMenu">
       </div>
-      <div class="headerMenu">
+
+      <nav class="headerMenu">
         <div class="headerButton1"><a href="Page 1">Contacts</a></div>
         <div class="headerButton2"><a href="Page 2">Blog</a></div>
         <div class="headerButton3"><a href="Page 3">Gallery</a></div>
         <div class="headerButton4"><a href="Page 4">News</a></div>
-      </div>
+      </nav>
     </div>
   </div>
 
@@ -107,29 +114,36 @@
         </div>
       </div>
     </div>
+    <div class="productContainerWrapper">
+      <div class="productContainer">
+        <div id="productContainerApple" class="productContainerApple"></div>
+        <div id="productContainerPear" class="productContainerApple"></div>
+        <div id="productContainerBall" class="productContainerApple"></div>
+      </div>
+    </div>
 
-  </div>
-
-  <div class="footerWrapperContainer">
-    <div class="footer">
-      <div class="footerContent">
-        <div class="footerLeftTextBox">
-          <p>Loren impusm Loren impusm</p>
-          <p>Loren impusm</p>
-          <p>Loren impusm</p>
-        </div>
-        <div class="footerCenterTextBox">
-          <p>Loren impusm Loren impusm</p>
-          <p>Loren impusm</p>
-          <p>Loren impusm</p>
-        </div>
-        <div class="footerRightTextBox">
-          <p>Loren impusm Loren impusm</p>
-          <p>Loren impusm</p>
-          <p>Loren impusm</p>
+    <div class="footerWrapperContainer">
+      <div class="footer">
+        <div class="footerContent">
+          <div class="footerLeftTextBox">
+            <p>Loren impusm Loren impusm</p>
+            <p>Loren impusm</p>
+            <p>Loren impusm</p>
+          </div>
+          <div class="footerCenterTextBox">
+            <p>Loren impusm Loren impusm</p>
+            <p>Loren impusm</p>
+            <p>Loren impusm</p>
+          </div>
+          <div class="footerRightTextBox">
+            <p>Loren impusm Loren impusm</p>
+            <p>Loren impusm</p>
+            <p>Loren impusm</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
+    <script src="functionality.js"></script>
 </body>
+
+</html>
